--- a/install
+++ b/install
@@ -85,8 +85,11 @@ install-dependencies () {
 	sudo usermod --shell /usr/bin/zsh root
 
 	# Install bat, lsd, ranger and neovim
-	sudo apt install ${BASE_PATH}/redist/deb-packages/lsd_0.21.0_amd64.deb
-	sudo apt install ${BASE_PATH}/redist/deb-packages/bat_0.19.0_amd64.deb
+	[ ! -d "${BASE_PATH}"/redist/deb-packages/ ] && mkdir -p "${BASE_PATH}"/redist/deb-packages/
+	wget https://github.com/Peltoche/lsd/releases/download/0.23.1/lsd_0.23.1_arm64.deb -O "${BASE_PATH}"/redist/deb-packages/lsd.deb
+	wget https://github.com/sharkdp/bat/releases/download/v0.22.1/bat_0.22.1_arm64.deb -O "${BASE_PATH}"/redist/deb-packages/bat.deb
+	sudo apt install ${BASE_PATH}/redist/deb-packages/lsd.deb
+	sudo apt install ${BASE_PATH}/redist/deb-packages/bat.deb
 	sudo apt install ranger -y
 	sudo add-apt-repository ppa:neovim-ppa/unstable -y
 	sudo apt update -y
